k8s/home_assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: hass
  labels:
    ms: home-assistant
spec:
  ports:
  - name: hass-p
    protocol: TCP
    port: 8123
    nodePort: 30123
    targetPort: hass-p-t
  selector:
    ms: home-assistant
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hass
  name: home-assistant
  labels:
    ms: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
        ms: home-assistant
  template:
    metadata:
      namespace: hass
      labels:
        ms: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/raspberrypi4-64-homeassistant:0.110.4
        ports:
        - containerPort: 8123
          hostPort: 30123
          name: hass-p-t
        volumeMounts:
        - name: home-assistant-config
          mountPath: /config
        - name: home-assistant-storage
          mountPath: /config/.storage
        # https://stackoverflow.com/questions/60077057/livenessprobe-with-secret-not-working-in-kubernetes
        livenessProbe:
          httpGet:
            path: /
            port: hass-p-t
            httpHeaders:
            - name: Authorization
              value: $TOKEN
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 15
      volumes:
        - name: home-assistant-config
          hostPath:
            path: /opt/home_automation/home-assistant/config
            type: Directory
        - name: home-assistant-storage
          hostPath:
            path: /mnt/nas_pi/hass_storage/.storage
            type: Directory
