k8s/mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: hass
  labels:
    ms: mosquitto
spec:
  ports:
  - name: mosquitto-1
    protocol: TCP
    port: 9001
    nodePort: 31001
    targetPort: mosquitto-1-t
  - name: mosquitto-2
    protocol: TCP
    port: 1883
    nodePort: 31883
    targetPort: mosquitto-2-t
  selector:
    ms: mosquitto
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hass
  name: mosquitto
  labels:
    ms: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
        ms: mosquitto
  template:
    metadata:
      namespace: hass
      labels:
        ms: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        ports:
        - containerPort: 9001
          name: mosquitto-1-t
        - containerPort: 1883
          hostPort: 31833
          name: mosquitto-2-t
        livenessProbe:
          tcpSocket:
            port: mosquitto-2-t
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
        - name: mosquitto-config
          mountPath: /mosquitto/config/
          readOnly: true
        - name: mosquitto-log
          mountPath: /mosquitto/log
        - name: mosquitto-data
          mountPath: /mosquitto/data
      volumes:
        - name: mosquitto-config
          hostPath:
            path: /mnt/nas_pi/mosquitto_storage/config/
            type: DirectoryOrCreate
        - name: mosquitto-log
          hostPath:
            path: /mnt/nas_pi/mosquitto_storage/log
            type: DirectoryOrCreate
        - name: mosquitto-data
          hostPath:
            path: /mnt/nas_pi/mosquitto_storage/data
            type: DirectoryOrCreate
