k8s/weather_servers.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-forecast
  namespace: hass
  labels:
    weather: forecast
    ms: weather
spec:
  ports:
  - name: w-forecast-sp
    protocol: TCP
    port: 9090
    targetPort: w-forecast-p
  selector:
    weather: forecast
  type: NodePort
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: weather-forecast-pv-html
# spec:
#   capacity:
#     storage: 10Mi
#   volumeMode: Filesystem
#   accessModes:
#   - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Delete
#   storageClassName: local-storage
#   local:
#     path: /opt/home_automation/local-weather-sites/forecast
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: weather-forecast-pvc-html
# spec:
#   storageClassName: local-storage
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Mi
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: weather-forecast-pv-nginx
# spec:
#   capacity:
#     storage: 10Mi
#   volumeMode: Filesystem
#   accessModes:
#   - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Delete
#   storageClassName: local-storage
#   local:
#     path: /opt/home_automation/local-weather-sites/forecast/config
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: weather-forecast-pvc-nginx
# spec:
#   storageClassName: local-storage
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hass
  name: weather-forecast
  labels:
    weather: forecast
    ms: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      weather: forecast
      ms: weather
  template:
    metadata:
      namespace: hass
      labels:
        weather: forecast
        ms: weather
    spec:
      containers:
      - name: weather-forecast
        image: nginx:latest
        ports:
        - containerPort: 80
          name: w-forecast-p
        volumeMounts:
        - name: weather-forecast-html
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: weather-forecast-nginx
          mountPath: /etc/nginx/conf.d
          readOnly: true
      volumes:
        - name: weather-forecast-html
          hostPath:
            path: /opt/home_automation/local-weather-sites/forecast
            type: Directory
        - name: weather-forecast-nginx
          hostPath:
            path: /opt/home_automation/local-weather-sites/forecast/config
            type: Directory
